[main] => fix: swagger and reademe
